Fixed MMOBHTML-36: Product's tags are too close to each-other

--- a/skin/frontend/default/iphone/css/iphone.css
+++ b/skin/frontend/default/iphone/css/iphone.css
@@ -1810,6 +1810,7 @@ section .category-title { display:none; }
 .collateral-box { margin:16px 0 0; }
     .collateral-box .tags-list { font-size:12px; padding:10px; }
         .collateral-box .tags-list a { font-weight:bold; color:#F4641E; }
+        .collateral-box .tags-list span { margin-right:5px; }
 
 
 /* Product review
